--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -88,3 +88,16 @@ jobs:
 
       - name: Run ShellCheck
         uses: containerbuildsystem/actions/shellcheck@master
+
+  pytype:
+    name: pytype
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      - name: Run pytype
+        uses: ben-alkov/actions/pytype@add-pytype-action
+        with:
+          path: 'osbs'
